force-app/main/default/objects/Gift_Card_Orders__c/Gift_Card_Orders__c.object-meta.xml
<CustomObject>
    <label>Gift Card Order</label>
    <nameField>
        <label>Gift Card Orders Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gift Card Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>