force-app/main/default/objects/Gift_Card_Orders__c/fields/Active_Custom_CheckBox__c.field-meta.xml
<CustomField>
    <fullName>Active_Custom_CheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Custom CheckBox</label>
    <type>Checkbox</type>
</CustomField>