force-app/main/default/objects/Gift_Card_Orders__c/fields/Delivered__c.field-meta.xml
<CustomField>
    <fullName>Delivered__c</fullName>
    <label>Delivered</label>
    <summaryForeignKey>Delivery_Object__c.Parent_Gift_Card_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>