force-app/main/default/objects/Gift_Card_Orders__c/fields/Driver_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Driver_Assigned__c</fullName>
    <label>Driver Assigned</label>
    <summarizedField>Driver_Assigned__c.Quantity_Assigned__c</summarizedField>
    <summaryForeignKey>Driver_Assigned__c.Gift_Card_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>