force-app/main/default/objects/Gift_Card_Orders__c/fields/Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fulfilled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>