force-app/main/default/objects/Gift_Card_Orders__c/fields/ISParent__c.field-meta.xml
<CustomField>
    <fullName>ISParent__c</fullName>
    <formula>IF( RIGHT( Name , 4) = &quot;0000&quot;,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISParent</label>
    <type>Checkbox</type>
</CustomField>