force-app/main/default/objects/Gift_Card_Orders__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Office</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>