force-app/main/default/objects/Gift_Card_Orders__c/fields/Order_Complete__c.field-meta.xml
<CustomField>
    <fullName>Order_Complete__c</fullName>
    <formula>IF(Delivered__c = Quantity_Ordered__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <label>Order Complete?</label>
    <type>Text</type>
</CustomField>