force-app/main/default/objects/Gift_Card_Orders__c/fields/Parent_Gift_Card_Order__c.field-meta.xml
<CustomField>
    <fullName>Parent_Gift_Card_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Gift Card Order</label>
    <referenceTo>Gift_Card_Orders__c</referenceTo>
    <relationshipLabel>Gift Card Orders</relationshipLabel>
    <relationshipName>Gift_Card_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>