force-app/main/default/objects/Gift_Card_Orders__c/fields/Remaining_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Delivered__c</fullName>
    <formula>Quantity_Ordered__c - Delivered__c</formula>
    <label>Remaining Delivered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>