force-app/main/default/objects/Gift_Card_Orders__c/fields/Remaining_Driver_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Driver_Assigned__c</fullName>
    <formula>Quantity_Ordered__c -   Driver_Assigned__c</formula>
    <label>Remaining Driver Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>