force-app/main/default/objects/Gift_Card_Orders__c/fields/Remaining_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Fulfilled__c</fullName>
    <formula>Quantity_Ordered__c -   Fulfilled__c</formula>
    <label>Remaining Fulfilled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>