force-app/main/default/objects/Gift_Card_Orders__c/fields/Remaining_Office__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Office__c</fullName>
    <formula>Quantity_Ordered__c -  Office__c</formula>
    <label>Remaining Office</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>