force-app/main/default/objects/Gift_Card_Orders__c/fields/Remaining_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Warehouse__c</fullName>
    <formula>Quantity_Ordered__c -  Warehouse__c</formula>
    <label>Remaining Warehouse</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>