force-app/main/default/objects/Gift_Card_Orders__c/fields/User_Address__c.field-meta.xml
<CustomField>
    <fullName>User_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associating Gift Card under User Address Object</description>
    <label>User Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Parent_Gift_Card_Order__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User_Address__c</referenceTo>
    <relationshipLabel>Gift Card Orders</relationshipLabel>
    <relationshipName>Gift_Card_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>