force-app/main/default/objects/Gift_Card_Orders__c/listViews/All_Gift_Card_Orders.listView-meta.xml
<ListView>
    <fullName>All_Gift_Card_Orders</fullName>
    <columns>NAME</columns>
    <columns>Date_Ordered__c</columns>
    <columns>Date_Received__c</columns>
    <columns>Branch_Location__c</columns>
    <columns>Quantity_Ordered__c</columns>
    <columns>Fulfilled__c</columns>
    <columns>Warehouse__c</columns>
    <columns>Office__c</columns>
    <columns>Driver_Assigned__c</columns>
    <columns>Delivered__c</columns>
    <columns>Order_Complete__c</columns>
    <columns>Parent_Gift_Card_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch_Location__c</field>
        <operation>equals</operation>
        <value>TX-Denton_Collin</value>
    </filters>
    <filters>
        <field>Date_Ordered__c</field>
        <operation>lessThan</operation>
        <value>7/30/2016</value>
    </filters>
    <label>All Gift Card Orders</label>
</ListView>