force-app/main/default/objects/Gift_Card_Orders__c/listViews/CompletedlParentGiftCardOrders.listView-meta.xml
<ListView>
    <fullName>CompletedlParentGiftCardOrders</fullName>
    <columns>NAME</columns>
    <columns>Date_Ordered__c</columns>
    <columns>Date_Received__c</columns>
    <columns>Branch_Location__c</columns>
    <columns>Quantity_Ordered__c</columns>
    <columns>Warehouse__c</columns>
    <columns>Fulfilled__c</columns>
    <columns>Office__c</columns>
    <columns>Driver_Assigned__c</columns>
    <columns>Delivered__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Complete__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>Parent_Gift_Card_Order__c</field>
        <operation>equals</operation>
    </filters>
    <label>Completed: Parent Gift Card Orders</label>
</ListView>