force-app/main/default/objects/Gift_Card_Orders__c/listViews/Kevins_Gift_Card_Orders.listView-meta.xml
<ListView>
    <fullName>Kevins_Gift_Card_Orders</fullName>
    <columns>NAME</columns>
    <columns>Branch_Location__c</columns>
    <columns>Date_Ordered__c</columns>
    <columns>Date_Received__c</columns>
    <columns>Quantity_Ordered__c</columns>
    <columns>Warehouse__c</columns>
    <columns>Fulfilled__c</columns>
    <columns>Office__c</columns>
    <columns>Driver_Assigned__c</columns>
    <columns>Order_Complete__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_Ordered__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2016</value>
    </filters>
    <label>Kevins Gift Card Orders</label>
</ListView>