force-app/main/default/objects/Gift_Card_Orders__c/listViews/Parent_Gift_Card_Orders.listView-meta.xml
<ListView>
    <fullName>Parent_Gift_Card_Orders</fullName>
    <columns>NAME</columns>
    <columns>Date_Ordered__c</columns>
    <columns>Date_Received__c</columns>
    <columns>Branch_Location__c</columns>
    <columns>Quantity_Ordered__c</columns>
    <columns>Warehouse__c</columns>
    <columns>Fulfilled__c</columns>
    <columns>Office__c</columns>
    <columns>Driver_Assigned__c</columns>
    <columns>Delivered__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_Ordered__c</field>
        <operation>lessOrEqual</operation>
        <value>8/11/2016</value>
    </filters>
    <label>Parent Gift Card Orders</label>
</ListView>